#41: PBKDF2 support.
